using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerIdle : PlayerStateBase
{
    // OnStateEnter is called when a transition starts and the state machine starts to evaluate this state
    override public void OnStateEnter(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    {
        
    }

     //OnStateUpdate is called on each Update frame between OnStateEnter and OnStateExit callbacks
    override public void OnStateUpdate(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    {
        Vector3 dir = new Vector3(Input.GetAxis("Horizontal"), 0, Input.GetAxis("Vertical"));

        if (dir.magnitude > 0.001f)
        {
            animator.SetBool("isMoving", true);
        }

        if (Input.GetKeyDown(KeyCode.K))
        {
            animator.SetBool("isDancing", true);
        }

        if (Input.GetKeyDown(KeyCode.Space))
        {
            animator.SetBool("isJumping", true);
        }

        if (Input.GetKeyDown(KeyCode.Q))
        {
            animator.SetBool("isAttacking", true);
        }

        if (Input.GetKeyDown(KeyCode.E) && GetPlayerControl(animator).canKickAttack())
        {
            animator.SetBool("isKicking", true);
        }

        if (GetPlayerControl(animator).canCombo())
        {
            animator.SetBool("isCombo", true);
        }
    }

    // OnStateExit is called when a transition ends and the state machine finishes evaluating this state
    override public void OnStateExit(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    {
       
    }

    
}
